--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no" />
 
     <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="JLVQfMkAkTPkzgV9pisr0UvY9OD0bZXpPYLoT7HFIgBXVhrgfw5vI9iZv9KxB4SdDM8/YbcTm1P/57Q9IJUkiA==" />
+<meta name="csrf-token" content="EeTqzQP9pLOTrOwov+TqYhbaGhtYq6AHpwh17VALdvjA/BZaPgianUk/zYPZvJ9YOugc+Y4UjQflBxwNfBvMIQ==" />
     
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <script type="text/javascript" src="cordova.js"></script>
@@ -129,15 +129,23 @@
 
   <div class="row">
     <div class="col-md-4 col-6" ng-repeat="p in ctl.space.products">
-      <a href="#" class="href_art">
-        <img src="https://www.jewelryvirtualfair.com/public/prod-page/{{p.photo_galleries[0].nome_foto}}"
+      <a href="" class="href_art">
+        <img ng-click='ctl.showPop(p)' src="https://www.jewelryvirtualfair.com/public/prod-page/{{p.photo_galleries[0].nome_foto}}"
         class="img-responsive bordered_f0 " alt="JVF" />
         <h3>{{p.nome_prodotto}}</h3>
         <!-- div class="prezzo_scat">€ 12,00</div -->
       </a>
     </div>
+  </div>    
+</div>
+
+<div id="imgpop" ng-click="ctl.closePop()">
+  <div>
+    <button id="close" type="button" class="close" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <img id="popcont" src="" class="img-responsive bordered_f0" style="width:100%;" alt="JVF" />
   </div>
-    
 </div>
 </script>
 <script type="text/ng-template" id="partials/gallery.html">
